--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -5,7 +5,13 @@
     
     <div class="card">
         <section class="avatar"></section>
-        <section class="details"></section>
+        <div class="details-wrap">
+            <section class="details">
+                <div class="details-content">
+                    
+                </div>
+            </section>
+        </div>
     </div>
 
 {% endblock content %}
