--- a/public/styles.css
+++ b/public/styles.css
@@ -67,10 +67,7 @@ header .menuItem:hover a {
     min-height: 400px;
     margin: 45px auto;
     position: relative;
-    padding: 10px;
-    border: solid var(--primary) 2px;
     box-shadow: 0px 2px 6px -2px rgba(0,0,0,0.4);
-
     animation: up 700ms ease-out;
 }
 
@@ -78,19 +75,32 @@ header .menuItem:hover a {
     background: url(https://source.unsplash.com/collection/1096192/) no-repeat left center;
     width: 100%;
     height: 100%;
-    filter: blur(2px);
-    -webkit-filter: blur(2px);
     position: absolute;
     top: 0;
     left: 0;
+    
 }
 
 .card section.details {
     width: 500px;
     height: 600px;
     position: relative;
-    background: linear-gradient(to top, rgba(0,0,0,0.8),  rgba(0,0,0,0.6));
+    right: 0;
+    background-color: white;
+    color: black;
+    padding: 16px;
+    box-sizing: border-box;
+    clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
 }
+
+.details-wrap {
+    filter: drop-shadow(8px 0px 4px rgba(50, 50, 0, 0.7));
+}
+
+.card section.details div.details-content {
+    padding-right: 100px;
+}
+
 
 @keyframes up {
     from {
