--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -8,7 +8,40 @@
         <div class="details-wrap">
             <section class="details">
                 <div class="details-content">
-                    
+                    <h3>Details</h3>
+
+                    <div class="item">
+                        <div>Teacher</div>
+                        <div>Erick Marshall</div>
+                    </div>
+
+                    <div class="item">
+                        <div>Age</div>
+                        <div>42</div>
+                    </div>
+
+                    <div class="item">
+                        <div>Degree Level</div>
+                        <div>High School</div>
+                    </div>
+
+                    <div class="item">
+                        <div>Class Type</div>
+                        <div>Online</div>
+                    </div>
+
+                    <div class="item">
+                        <div>Subjects</div>
+                        <div>
+                            <span>Math</span>
+                            <span>English</span>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div>Since</div>
+                        <div>01/01/1000</div>
+                    </div>
                 </div>
             </section>
         </div>
