--- a/views/teachers/create.njk
+++ b/views/teachers/create.njk
@@ -4,7 +4,7 @@
 {% block content %}
     
     <form class="card" method="POST" action="/teachers">
-        <section class="avatar"></section>
+        <section class="avatar" style="background: url(https://source.unsplash.com/collection/1096192/) no-repeat center;"></section>
         <div class="details-wrap">
             <section class="details">
                 <div class="details-content">
@@ -62,13 +62,13 @@
                         <div>
                             <label for="online">
                                 <span>
-                                    <input type="radio" name="class_type" id="online" value="online" checked>
+                                    <input type="radio" name="class_type" id="online" value="Online" checked>
                                     Online
                                 </span>
                             </label>
                             <label for="traditional">
                                 <span>
-                                    <input type="radio" name="class_type" id="traditional" value="traditional"> 
+                                    <input type="radio" name="class_type" id="traditional" value="Traditional"> 
                                     Traditional
                                 </span>
                             </label>
