--- a/views/teachers/show.njk
+++ b/views/teachers/show.njk
@@ -44,7 +44,7 @@
                         <div>{{ teacher.created_at }}</div>
                     </div>
 
-                    <a href="#" class="button">Edit</a>
+                    <a href="/teachers/{{ teacher.id }}/edit" class="button">Edit</a>
                 </div>
             </section>
         </div>
