--- a/public/styles.css
+++ b/public/styles.css
@@ -297,3 +297,11 @@ a.button:hover::after, form button[type="submit"]:hover::after {
 .select select:disabled ~ .select_arrow {
     border-top-color: #ffffff;
 }
+
+#form-delete button {
+    margin-top: 8px;
+    box-sizing: border-box;
+    background-color: #d32f2f;
+    width: 100%;
+    color: white;
+}
