--- a/views/teachers/edit.njk
+++ b/views/teachers/edit.njk
@@ -2,23 +2,34 @@
 
 
 {% block content %}
-    
-    <form class="card" method="POST" action="/teachers?_method=PUT">
+
+    <div class="card">
+
         <section class="avatar" style="background: url({{ teacher.avatar_url }}) no-repeat center;"></section>
-        <div class="details-wrap">
-            <section class="details">
-                <div class="details-content">
-                    <h3>Edit Teacher</h3>
+            <div class="details-wrap">
+                <section class="details">
+                        <div class="details-content">
+                            <h3>Edit Teacher</h3>
 
-                    {% include 'teachers/fields.njk' %}
+                            <form method="POST" action="/teachers?_method=PUT">
 
-                    <input type="hidden" name="id" value="{{ teacher.id }}">
+                                {% include 'teachers/fields.njk' %}
 
-                    <button type="submit">Save</button>
+                                <input type="hidden" name="id" value="{{ teacher.id }}">
 
-                </div>
-            </section>
-        </div>
-    </form>
+                                <button type="submit">Save</button>
+                            
+                            </form>
+
+                            <form id="form-delete" method="POST" action="/teachers?_method=DELETE">
+                                <input type="hidden" name="id" value="{{ teacher.id }}">
+                                <button type="submit">Delete</button>
+                            </form>
+                        </div>
+
+                </section>
+            </div>
+    
+    </div>
 
 {% endblock content %}
