--- a/views/layout.njk
+++ b/views/layout.njk
@@ -15,14 +15,19 @@
 <body>
     <header>
 
-        <div class="menuItem active">
-            <a href="/"><i class="fas fa-chalkboard-teacher fa-2x"></i>
-            <p>Teachers</p></a>
-        </div>
-        <div class="menuItem">
-            <a href="/students"><i class="fas fa-user-graduate fa-2x"></i>
-            <p>Students</p></a>
-        </div>
+        <a href="/teachers">
+            <div class="menuItem">
+                <i class="fas fa-chalkboard-teacher fa-2x"></i>
+                <p>Teachers</p>
+            </div>
+        </a>
+
+        <a href="/students">
+            <div class="menuItem">
+                <i class="fas fa-user-graduate fa-2x"></i>
+                <p>Students</p>
+            </div>
+        </a>
         
     </header>
 
@@ -32,5 +37,6 @@
 
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js"></script>
+    <script src="/scripts.js"></script>
 </body>
 </html>
