--- a/views/students/index.njk
+++ b/views/students/index.njk
@@ -36,7 +36,7 @@
             </table>
         </div>
 
-        <a href="/teachers/create" id="newBtn">New Teacher</a>
+        <a href="/students/create" id="newBtn">New Student</a>
     </div>
 
 {% endblock content %}
