--- a/views/students/edit.njk
+++ b/views/students/edit.njk
@@ -5,26 +5,27 @@
 
     <div class="card">
 
-        <section class="avatar" style="background: url({{ teacher.avatar_url }}) no-repeat center;"></section>
+        <section class="avatar" style="background: url({{ student.avatar_url }}) no-repeat center; background-size: cover;"></section>
             <div class="details-wrap">
                 <section class="details">
                         <div class="details-content">
-                            <h3>Edit Teacher</h3>
+                            <h3>Edit Student</h3>
 
-                            <form method="POST" action="/teachers?_method=PUT">
+                            <form method="POST" action="/students?_method=PUT" autocomplete="off">
 
-                                {% include 'teachers/fields.njk' %}
+                                {% include 'students/fields.njk' %}
 
-                                <input type="hidden" name="id" value="{{ teacher.id }}">
+                                <input type="hidden" name="id" value="{{ student.id }}">
 
                                 <button type="submit">Save</button>
                             
                             </form>
 
-                            <form id="form-delete" method="POST" action="/teachers?_method=DELETE">
-                                <input type="hidden" name="id" value="{{ teacher.id }}">
-                                <button type="submit">Delete</button>
+                            <form id="form-delete" method="POST" action="/students?_method=DELETE">
+                                <input type="hidden" name="id" value="{{ student.id }}">
+                                {% include 'deleteBtn.njk' %}
                             </form>
+
                         </div>
 
                 </section>
