--- a/views/students/fields.njk
+++ b/views/students/fields.njk
@@ -40,7 +40,7 @@
             type="email"
             name="email"
             placeholder="example@example.com"
-            value="{{ student.name }}"
+            value="{{ student.email }}"
         >
     </div>
 </div>
@@ -49,13 +49,13 @@
     <div>Grade</div>
     <div class="select">
         <select name="grade">
-            <option value="ms6" {% if student.degree == "ms6" %} selected {% endif %}>Middle School 6th Grade</option>
-            <option value="ms7" {% if student.degree == "ms7" %} selected {% endif %}>Middle School 7th Grade</option>
-            <option value="ms8" {% if student.degree == "ms8" %} selected {% endif %}>Middle School 8th Grade</option>
-            <option value="hs9" {% if student.degree == "hs9" %} selected {% endif %}>High School 9th Grade</option>
-            <option value="hs10" {% if student.degree == "hs10" %} selected {% endif %}>High School 10th Grade</option>
-            <option value="hs11" {% if student.degree == "hs11" %} selected {% endif %}>High School 11th Grade</option>
-            <option value="hs12" {% if student.degree == "hs12" %} selected {% endif %}>High School 12th Grade</option>
+            <option value="ms6" {% if student.grade == "ms6" %} selected {% endif %}>Middle School 6th Grade</option>
+            <option value="ms7" {% if student.grade == "ms7" %} selected {% endif %}>Middle School 7th Grade</option>
+            <option value="ms8" {% if student.grade == "ms8" %} selected {% endif %}>Middle School 8th Grade</option>
+            <option value="hs9" {% if student.grade == "hs9" %} selected {% endif %}>High School 9th Grade</option>
+            <option value="hs10" {% if student.grade == "hs10" %} selected {% endif %}>High School 10th Grade</option>
+            <option value="hs11" {% if student.grade == "hs11" %} selected {% endif %}>High School 11th Grade</option>
+            <option value="hs12" {% if student.grade == "hs12" %} selected {% endif %}>High School 12th Grade</option>
         </select>
         <div class="select_arrow"></div>
     </div>
@@ -68,7 +68,7 @@
             type="number"
             name="hours"
             placeholder="Ex.: 30h"
-            value="{{ student.name }}"
+            value="{{ student.hours }}"
         >
     </div>
 </div>
