--- a/views/students/index.njk
+++ b/views/students/index.njk
@@ -8,27 +8,29 @@
             <table width="100%">
                 <thead>
                     <tr>
-                        <th>Teacher</th>
-                        <th>Subjects</th>
+                        <th>Student</th>
+                        <th>Email</th>
+                        <th>Grade</th>
                         <th>Action</th>
                     </tr>
                 </thead>
 
                 <tbody>
-                    {% for teacher in teachers %}
+                    {% for student in students %}
                         <tr>
                             <td>
-                                <span style="background-image: url({{ teacher.avatar_url }});"></span>
-                                {{ teacher.name }}
+                                <span style="background-image: url({{ student.avatar_url }});"></span>
+                                {{ student.name }}
                             </td>
                             <td>
-                                {% for subject in teacher.subjects.split(',') %}
-                                    <span class="subject">{{ subject }}</span>
-                                {% endfor %}
+                                {{ student.email }}
                             </td>
                             <td>
-                                <a href="/teachers/{{ teacher.id }}"><i class="fas fa-eye"></i></a>
-                                <a href="/teachers/{{ teacher.id }}/edit"><i class="fas fa-pen"></i></a>
+                                {{ grade(student.grade) }}
+                            </td>
+                            <td>
+                                <a href="/students/{{ student.id }}"><i class="fas fa-eye"></i></a>
+                                <a href="/students/{{ student.id }}/edit"><i class="fas fa-pen"></i></a>
                             </td>
                         </tr>
                     {% endfor %}
