--- a/views/teachers/create.njk
+++ b/views/teachers/create.njk
@@ -3,8 +3,8 @@
 
 {% block content %}
     
-    <form class="card" method="POST" action="/teachers">
-        <section class="avatar" style="background: url(https://source.unsplash.com/collection/1096192/) no-repeat center;"></section>
+    <form class="card" method="POST" action="/teachers" autocomplete="off">
+        <section class="avatar" style="background: url(https://source.unsplash.com/collection/1096192/) no-repeat center; background-size: cover;"></section>
         <div class="details-wrap">
             <section class="details">
                 <div class="details-content">
