--- a/views/teachers/edit.njk
+++ b/views/teachers/edit.njk
@@ -5,13 +5,13 @@
 
     <div class="card">
 
-        <section class="avatar" style="background: url({{ teacher.avatar_url }}) no-repeat center;"></section>
+        <section class="avatar" style="background: url({{ teacher.avatar_url }}) no-repeat center; background-size: cover;"></section>
             <div class="details-wrap">
                 <section class="details">
                         <div class="details-content">
                             <h3>Edit Teacher</h3>
 
-                            <form method="POST" action="/teachers?_method=PUT">
+                            <form method="POST" action="/teachers?_method=PUT" autocomplete="off">
 
                                 {% include 'teachers/fields.njk' %}
 
@@ -23,8 +23,9 @@
 
                             <form id="form-delete" method="POST" action="/teachers?_method=DELETE">
                                 <input type="hidden" name="id" value="{{ teacher.id }}">
-                                <button type="submit">Delete</button>
+                                {% include 'deleteBtn.njk' %}
                             </form>
+
                         </div>
 
                 </section>
