--- a/views/teachers/show.njk
+++ b/views/teachers/show.njk
@@ -4,7 +4,7 @@
 {% block content %}
     
     <div class="card">
-        <section class="avatar" style="background: url({{ teacher.avatar_url }}) no-repeat center;"></section>
+        <section class="avatar" style="background: url({{ teacher.avatar_url }}) no-repeat center; background-size: cover;"></section>
         <div class="details-wrap">
             <section class="details">
                 <div class="details-content">
