--- a/src/app/views/students/show.njk
+++ b/src/app/views/students/show.njk
@@ -35,6 +35,11 @@
                         <div>{{ student.hours }}</div>
                     </div>
 
+                    <div class="item">
+                        <div>Teacher</div>
+                        <div>{{ student.teacher_name }}</div>
+                    </div>
+
                     <a href="/students/{{ student.id }}/edit" class="button">Edit</a>
                 </div>
             </section>
