--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -8,7 +8,7 @@
         
     {% endblock %}
     
-    <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <link rel="icon" href="/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <link rel="stylesheet" href="/styles.css">
 </head>
