--- a/src/app/views/teachers/index.njk
+++ b/src/app/views/teachers/index.njk
@@ -10,6 +10,7 @@
                     <tr>
                         <th>Teacher</th>
                         <th>Subjects</th>
+                        <th>Students</th>
                         <th>Action</th>
                     </tr>
                 </thead>
@@ -25,6 +26,9 @@
                                 {% for subject in teacher.subjects.split(',') %}
                                     <span class="subject">{{ subject }}</span>
                                 {% endfor %}
+                            </td>
+                            <td>
+                                {{ teacher.total_students }}
                             </td>
                             <td>
                                 <a href="/teachers/{{ teacher.id }}"><i class="fas fa-eye"></i></a>
