--- a/public/styles.css
+++ b/public/styles.css
@@ -421,3 +421,35 @@ td:nth-last-child(2) {
 #newBtn::after{
     border-radius: 0;
 }
+
+/* -------------------------------------------------------------------------- */
+/*                                   FILTERS                                  */
+/* -------------------------------------------------------------------------- */
+
+.contentHeader {
+    margin: 32px auto 0;
+    width: 800px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+
+.contentHeader form {
+    display: grid;
+    grid-template-columns: 1fr 120px;
+    align-items: center;
+    grid-gap: 8px;
+}
+
+.contentHeader form button{
+    margin: 0;
+    background-color: var(--primary);
+    color: white;
+}
+
+.contentHeader form input{
+    border: 1px solid #eee;
+    border-radius: 4px;
+    padding: 9px;
+    box-sizing: border-box;
+}
