--- a/public/styles.css
+++ b/public/styles.css
@@ -397,11 +397,19 @@ td a:nth-child(2) {
 .table-container thead tr th:last-child,
 td:last-child {
     text-align: center;
+    min-width: 100px;
 }
 
 .table-container thead tr th:nth-last-child(2),
 td:nth-last-child(2) {
     text-align: center;
+    min-width: 120px;
+}
+
+.table-container thead tr th:nth-last-child(3),
+td:nth-last-child(3) {
+    max-width: 300px;
+    overflow-x: hidden;
 }
 
 #newBtn {
@@ -431,6 +439,7 @@ td:nth-last-child(2) {
     width: 800px;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-gap: 8px;
     align-items: center;
 }
 
@@ -452,4 +461,40 @@ td:nth-last-child(2) {
     border-radius: 4px;
     padding: 9px;
     box-sizing: border-box;
+}
+
+/* -------------------------------------------------------------------------- */
+/*                                 PAGINATION                                 */
+/* -------------------------------------------------------------------------- */
+
+.contentHeader .pagination {
+    justify-self: end;
+}
+
+.pagination a,
+.pagination span{
+    color: white;
+    text-decoration: none;
+    margin-right: 8px;
+    background-color: var(--primary);
+    padding: 8px 12px;
+    border-radius: 4px;
+}
+
+.pagination a:hover {
+    filter:brightness(1.3)
+}
+
+.pagination a.active {
+    border: solid 2px var(--secondary);
+    cursor: initial;
+    filter: brightness(1);
+}
+.pagination span {
+    filter: brightness(0.5);
+    cursor: initial;
+}
+
+.pagination span:last-child {
+    margin: 0;
 }
